# HabitTrackerBot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
migrations/: env.py
src/api/: main.py
src/api/core/: config.py  database.py  exceptions.py  logging.py  sentry_init.py
src/api/db/models/: __init__.py
src/api/models/: base.py  habit.py  habit_execution.py  user.py
src/api/repositories/: __init__.py  base_repository.py  habit_execution_repository.py  habit_repository.py  user_repository.py
src/api/schemas/: __init__.py  habit_execution_schema.py  habit_schema.py  user_schema.py
src/core_shared/: logging_setup.py  sentry_sdk_setup.py
