[project]
name = "habittrackerbot"
version = "0.1.0"
description = "Чат-бот для трекинга привычек"
authors = [
    {name = "nick",email = "nicksok2413@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "psycopg[binary] (>=3.2.8,<4.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic (>=2.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pytelegrambotapi (>=4.27.0,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
ruff = "^0.11.9"
mypy = "^1.15.0"
pip-audit = "^2.9.0"
pre-commit = "^4.2.0"

# Настройки Ruff
[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "ASYNC", "S", "BLE", "A", "COM", "C4", "T20", "PYI", "PT", "RET", "SIM", "TID", "ARG"] # Выбери нужные тебе правила
ignore = []
# exclude = [] # если нужно исключить папки

[tool.ruff.format]
quote-style = "double"
# indent-style = "space" # по умолчанию
# skip-magic-trailing-comma = false # по умолчанию
# line-ending = "auto" # по умолчанию

# Настройки Mypy
[tool.mypy]
python_version = "3.12"
warn_return_any = true
ignore_missing_imports = true # На начальном этапе может быть полезно
# strict = true # Для максимальной строгости, можно включить позже
# exclude = '(?x)(migrations/)' # Пример исключения папки миграций
